--- a/android_app/AEPGPEncryptor/app/src/main/res/values/strings.xml
+++ b/android_app/AEPGPEncryptor/app/src/main/res/values/strings.xml
@@ -10,4 +10,24 @@
     <string name="status_selected">Card applet selected successfully.</string>
     <string name="status_failed">Card communication failed. Check connection and try again.</string>
     <string name="coming_soon">Coming soon.</string>
+    <string name="encrypt_instruction">Pick a file to encrypt, then tap your AEPGP card to load the public key.</string>
+    <string name="decrypt_instruction">Choose an encrypted file (.enc), then tap or attach your card to decrypt.</string>
+    <string name="select_file">Select file</string>
+    <string name="select_encrypted_file">Select encrypted file</string>
+    <string name="no_file_selected">No file selected</string>
+    <string name="fetch_public_key">Fetch public key from card</string>
+    <string name="key_not_loaded">Public key not loaded</string>
+    <string name="working">Working…</string>
+    <string name="enter_pin">Enter PIN</string>
+    <string name="generate_keypair">Generate keypair</string>
+    <string name="change_pin">Change PIN</string>
+    <string name="old_pin">Current PIN</string>
+    <string name="new_pin">New PIN</string>
+    <string name="card_mgmt_instruction">Manage your AEPGP card: generate keys or change PIN.</string>
+    <string name="pin_required">PIN required</string>
+    <string name="key_loaded">Public key loaded</string>
+    <string name="encryption_complete">Encryption complete</string>
+    <string name="decryption_complete">Decryption complete</string>
+    <string name="status_waiting_card">Waiting for card…</string>
+    <string name="error_generic">Operation failed</string>
 </resources>
